Bot_V2/src/objects/Einstein_Data_Message__c.object
<CustomObject>
    <fields>
        <fullName>Einstein_Keyword__c</fullName>
        <label>Einstein Keyword</label>
        <referenceTo>Einstein_Keyword__c</referenceTo>
        <relationshipLabel>Einstein Data Messages</relationshipLabel>
        <relationshipName>Einstein_Data_Messages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Einstein_Upload_Status__c</fullName>
        <label>Einstein_Upload_Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Uploaded</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Uploaded</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Known_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Known Issue</label>
        <referenceTo>Known_Issue__c</referenceTo>
        <relationshipLabel>Einstein Data Messages</relationshipLabel>
        <relationshipName>Einstein_Data_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Uploaded_to_Einstein__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uploaded to Einstein</label>
        <type>Checkbox</type>
    </fields>
    <label>Einstein Data Message</label>
    <nameField>
        <displayFormat>EDM-{0000}</displayFormat>
        <label>Einstein Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Einstein Data Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Message_Not_Empty</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Message__c )  ||  ISNULL(Message__c )</errorConditionFormula>
        <errorDisplayField>Message__c</errorDisplayField>
        <errorMessage>You must enter a valid message</errorMessage>
    </validationRules>
</CustomObject>